prevent img distortion on horiz shrink of viewport
good old object-fit: cover

--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -115,3 +115,10 @@ section { padding: 6em 0; }
 }
 
 .section-middle { background: var(--clr-choco); }
+
+
+/* ###### */
+/* IMAGES */
+/* ------ */
+
+img { object-fit: cover; }
